compiler/test-data/parser/types/errors/draft_on_blueprint.frel
module types.errors.draft_on_blueprint

blueprint renderer(title : String) {
    text { title }
}

backend InvalidDraftBackend {
    template : draft Blueprint<String>
}
